--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2016 - August 2018</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - (May 2023)</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -137,7 +137,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
                     <p class="pub-text">
-                        <b>D.G. Delafield</b>, L. Li, (2020). “Enhanced Glycoproteomic Profiling Depth Through PGCIncorporated Separation 
+                        <b>D.G. Delafield</b>, L. Li, (2020). “Enhanced Glycoproteomic Profiling Depth Through PGC-Incorporated Separation 
                         Regimes.” (Manuscript in preparation)
                     </p>
                     <p class="pub-text">
@@ -167,7 +167,7 @@
                     <p class="pub-text">
                         Li, G., <b>D. G. Delafield</b> and L. Li (2019). "Improved Structural Elucidation of Peptide Isomers and
                         Their Receptors Using Advanced Ion Mobility-Mass Spectrometry." Trends in Analytical Chemistry. 
-                        Published online, June 4, 2019, in press, <a href="https://doi.org/10.1016/j.trac.2019.05.048">
+                        Published online, June 4, 2019, in press. <a href="https://doi.org/10.1016/j.trac.2019.05.048">
                             10.1016/j.trac.2019.05.048</a>
                     </p>
                     <p class="pub-text">
