typo correction and format test

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
                             Download CV
                             </a>
                         </button>
+                        <button type="button" class="btn btn-primary" style="margin-left: 2rem;">
+                            <a class="button-text" href="www.lilabs.org">
+                            My Research Group
+                            </a>
+                        </button>
                     </div>
                 </div>
             </section>
