--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             </a>
                         </button>
                         <button type="button" class="btn btn-primary" style="margin-left: 2rem;">
-                            <a class="button-text" href="www.lilabs.org">
+                            <a class="button-text" href="https://www.lilabs.org">
                             My Research Group
                             </a>
                         </button>
