'fixed section title'

--- a/portfolio.html
+++ b/portfolio.html
@@ -216,14 +216,14 @@
             <!--Presentations-->
             <section class="resume-section" id="presentations">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Presentations</h2>
+                    <h2 class="mb-5">Oral Presentations</h2>
                     <div class="row">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Presentations/US HUPO 2018.png" alt="MCP Review Image">
                             <div class="card-body">
                                 <h5 class="card-title">N-Glycopeptide Feature Identification by Revealing Trends Between Analyte
                                                        Composition and Compensation Field Through FAIMS-Coupled MS Platform</h5>
-                                <p class="card-text">U.S. HUPO</p>
+                                <p class="card-text">U.S. HUPO 2018</p>
                                 <a href="assets/img/Presentations/US HUPO 2018.pdf" target="blank" class="btn btn-primary">Read</a>
                             </div>
                         </div>
