'added C lang image'

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                             High-Throughput Mass Spectrometry
                             <li>
                                 <span class="fa-li-low"></span>
-                                Instrumentation: Thermo Elite, Q-Exactive Series | Agilent 6506 IM-QTOF | Bruker timsTOF Pro | Waters Synapt G2 
+                                Instrumentation: Thermo Elite, Q-Exactive Series | Agilent 6560 IM-QTOF | Bruker timsTOF Pro | Waters Synapt G2 
                             </li>
                         </li>
                         <li>
@@ -304,6 +304,7 @@
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="skills-image"><img src="./assets/img/Clang.svg" alt="C Language"></li>
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
