--- a/portfolio.html
+++ b/portfolio.html
@@ -205,7 +205,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/img/Posters/ASMS 2020.png" width="250" height="187" alt="Card image cap">
+                        <img class="card-img-top" src="assets/img/Posters/ASMS 2020_thumb.png" alt="Card image cap">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">Enhancing Glycopeptide Detection, Identification, and Structural Characterization through
                                                    PGC-Incorporated LC-IMS</h5>
