format publication text

--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
                         Ma, H., <b>D. G. Delafield</b>, Z. Wang, J. You and S. Wu (2017). "Finding Biomass Degrading Enzymes 
                         Through an Activity-Correlated Quantitative Proteomics Platform (ACPP)." <i>Journal of American 
                         for Mass Spectrometry</i>. 28, 655-663. <a href="https://pubs.acs.org/doi/abs/10.1021/jasms.8b05509">
-                            10.1021/jasms.8b05509
-                        </a>
+                            10.1021/jasms.8b05509</a>
                     </p>
                 </div>
             </section>
