--- a/portfolio.html
+++ b/portfolio.html
@@ -153,22 +153,21 @@
                         </p>
                         <p class="pub-text">
                             Ruiz, M., Y. Yang, C. A. Lochbaum, <b>D. G. Delafield</b>, J. J. Pignatello, L. Li and J. A. Pedersen (2019).
-                            "Peroxymonosulfate Oxidizes Amino Acids in Water without Activation." Environmental Science and 
-                            Technology. 53, 10845-10854. <a href="https://pubs.acs.org/doi/abs/10.1021/acs.est.9b01322">
+                            "Peroxymonosulfate Oxidizes Amino Acids in Water without Activation." <i>Environmental Science and 
+                            Technology</i>. 53, 10845-10854. <a href="https://pubs.acs.org/doi/abs/10.1021/acs.est.9b01322">
                                 10.1021/acs.est.9b01322</a>
                         </p>
                         <p class="pub-text">
                             Li, G., <b>D. G. Delafield</b> and L. Li (2019). "Improved Structural Elucidation of Peptide Isomers and
-                            Their Receptors Using Advanced Ion Mobility-Mass Spectrometry." Trends in Analytical Chemistry. 
+                            Their Receptors Using Advanced Ion Mobility-Mass Spectrometry." <i>Trends in Analytical Chemistry</i>. 
                             Published online, June 4, 2019, in press. <a href="https://doi.org/10.1016/j.trac.2019.05.048">
                                 10.1016/j.trac.2019.05.048</a>
                         </p>
                         <p class="pub-text">
                             Ma, H., <b>D. G. Delafield</b>, Z. Wang, J. You and S. Wu (2017). "Finding Biomass Degrading Enzymes 
-                            Through an Activity-Correlated Quantitative Proteomics Platform (ACPP)." Journal of American 
-                            Society for Mass Spectrometry. 28, 655-663. <a href="https://pubs.acs.org/doi/abs/10.1021/jasms.8b05509">
-                                10.1021/jasms.8b05509
-                            </a>
+                            Through an Activity-Correlated Quantitative Proteomics Platform (ACPP)." <i>Journal of American 
+                            for Mass Spectrometry</i>. 28, 655-663. <a href="https://pubs.acs.org/doi/abs/10.1021/jasms.8b05509">
+                                10.1021/jasms.8b05509</a>
                         </p>
                     </div>
                 </div>
