added resume, fixed text

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
                     </div>
                     <div class="row">
                         <button type="button" class="btn btn-primary">
+                            <a class="button-text" href="assets/DanielGDelafield_Resume.pdf" download="DanielGDelafield_Resume">
+                            My Resume
+                            </a>
+                        </button>
+                        <button type="button" class="btn btn-primary">
                             <a class="button-text" href="assets/CV_GrahamDelafield.pdf" download="CV_GrahamDelafield">
                             Download CV
                             </a>
@@ -182,19 +187,19 @@
                         during Human Pancreas Development and Maturation,” <i>Nature Communications</i>, under revision.
                     </p>
                     <p class="pub-text">
-                        Ruiz, M., Y. Yang, C. A. Lochbaum, <b>D. G. Delafield</b>, J. J. Pignatello, L. Li and J. A. Pedersen (2019).
+                        Ruiz, M., Y. Yang, C. A. Lochbaum, <b>D.G. Delafield</b>, J. J. Pignatello, L. Li and J. A. Pedersen (2019).
                         "Peroxymonosulfate Oxidizes Amino Acids in Water without Activation." <i>Environmental Science and 
                         Technology</i>. 53, 10845-10854. <a href="https://pubs.acs.org/doi/abs/10.1021/acs.est.9b01322">
                             10.1021/acs.est.9b01322</a>
                     </p>
                     <p class="pub-text">
-                        Li, G., <b>D. G. Delafield</b> and L. Li (2019). "Improved Structural Elucidation of Peptide Isomers and
+                        Li, G., <b>D.G. Delafield</b> and L. Li (2019). "Improved Structural Elucidation of Peptide Isomers and
                         Their Receptors Using Advanced Ion Mobility-Mass Spectrometry." <i>Trends in Analytical Chemistry</i>. 
                         Published online, June 4, 2019, in press. <a href="https://doi.org/10.1016/j.trac.2019.05.048">
                             10.1016/j.trac.2019.05.048</a>
                     </p>
                     <p class="pub-text">
-                        Ma, H., <b>D. G. Delafield</b>, Z. Wang, J. You and S. Wu (2017). "Finding Biomass Degrading Enzymes 
+                        Ma, H., <b>D.G. Delafield</b>, Z. Wang, J. You and S. Wu (2017). "Finding Biomass Degrading Enzymes 
                         Through an Activity-Correlated Quantitative Proteomics Platform (ACPP)." <i>Journal of American 
                         for Mass Spectrometry</i>. 28, 655-663. <a href="https://pubs.acs.org/doi/abs/10.1021/jasms.8b05509">
                             10.1021/jasms.8b05509</a>
