added resume button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             My Resume
                             </a>
                         </button>
-                        <button type="button" class="btn btn-primary">
+                        <button type="button" class="btn btn-primary" style="margin-left: 2rem;">
                             <a class="button-text" href="assets/CV_GrahamDelafield.pdf" download="CV_GrahamDelafield">
                             Download CV
                             </a>
