--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         Biological Samples. <i>Nature Methods</i>, to be submitted.
                     </p>
                     <p class="pub-text">
-                        X. Zhong, D. C. Frost, Q. Yu, M. Li, T.-J. Gu, <b>D.G. Delafield</b>, L. Li (2020) “Mass Defect-based DiLeu
+                        X. Zhong, D. C. Frost, Q. Yu, M. Li, T.J. Gu, <b>D.G. Delafield</b>, L. Li (2020) “Mass Defect-based DiLeu
                         Tagging for Multiplexed Data-Independent Acquisition,” <i>Analytical Chemistry</i>, to be submitted.
                     </p>
                     <p class="pub-text">
