--- a/portfolio.html
+++ b/portfolio.html
@@ -69,6 +69,11 @@
                     </div>
                     <div class="row">
                         <button type="button" class="btn btn-primary">
+                            <a class="button-text" href="assets/DanielGDelafield_Resume.pdf" download="DanielGDelafield_Resume">
+                            My Resume
+                            </a>
+                        </button>
+                        <button type="button" class="btn btn-primary" style="margin-left: 2rem;">
                             <a class="button-text" href="assets/CV_GrahamDelafield.pdf" download="CV_GrahamDelafield">
                             Download CV
                             </a>
