added icon and portfolio description

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,11 +53,10 @@
                         645 Skyview Place · Madison, WI 53713 · (405) 219-4741 ·
                         <a href="mailto:graham.delafield@gmail.com" style="color: #3a426b;">graham.delafield@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a developing researcher in the fields of proteomics, bioinformatics, and computer science. 
-                        Currently I am focused on analytical innovation and computational modeling to aid in the profiling and 
-                        characterization of the human glycoproteome, performing graduate research at the University of Wisconsin-Madison.
-                        Anticipating graduation in May, 2023, I am interested in gaining experience in industrial and governmenta settings
-                        that allow me to exercise my technical expertise and strong communication and leadership skills.
+                    <p class="lead mb-5">Below is a up-to-date repository of my scientific contributions, posters and presentations. While all
+                                         posters and presentations may be viewed and saved from the browser, the journal publications are left as
+                                         links to the publishers. Should you be interested in reading further and cannot access the material online,
+                                         please contact me and I will happily provide the entire manuscript.
                     </p>
                     <div class="row">
                         <div class="social-icons">
