--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-r-project"></i></li>
                         <li class="skills-image"><img src="./assets/img/Clang.svg" alt="C Language"></li>
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
