--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <p class="pub-text">
                         Y Shi, Z. Li, <b>D.G. Delafield</b>, Z. Ye, H. Ye, X. Shi, B. Wang, Z. Chen, F. Ma, L. Li (2020) A Novel Mass 
                         Spectrometry-based Method for Qualitative and Quantitative Analysis of Citrullinated Proteins from Complex 
-                        Biological Samples. <i>Nature Methods</i>, to be submitted.
+                        Biological Samples. <i>Nature Methods</i>, in submission.
                     </p>
                     <p class="pub-text">
                         X. Zhong, D. C. Frost, Q. Yu, M. Li, T.J. Gu, <b>D.G. Delafield</b>, L. Li (2020) “Mass Defect-based DiLeu
@@ -183,8 +183,9 @@
                     </p>
                     <p class="pub-text">
                         Z. Li, D. M. Tremmel, F. Ma, Q. Yu, M. Ma, <b>D.G. Delafield</b>, Y. Shi, B. Wang, S. A. Mitchell, A. K. Feeney,
-                        V. S. Jain, S. D. Sackett, J. S. Odorico, L. Li (2020) “Proteome-wide and Matrisome-specific Alterations 
-                        during Human Pancreas Development and Maturation,” <i>Nature Communications</i>, under revision.
+                            V. S. Jain, S. D. Sackett, J. S. Odorico, L. Li (2020) “Proteome-wide and Matrisome-specific Alterations 
+                            during Human Pancreas Development and Maturation,” <i>Nature Communications</i>. Published online February 15. 2021.
+                            <a href="https://www.nature.com/articles/s41467-021-21261-w">10.1038/s41467-021-21261-w</a>
                     </p>
                     <p class="pub-text">
                         Ruiz, M., Y. Yang, C. A. Lochbaum, <b>D.G. Delafield</b>, J. J. Pignatello, L. Li and J. A. Pedersen (2019).
