--- a/portfolio.html
+++ b/portfolio.html
@@ -101,6 +101,15 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/ECM_Nat_Com.png" alt="MCP Review Image">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Proteome-wide and Matrisome-specific Alterations during Human Pancreas Development and Maturation</h5>
+                                <p class="card-text">This comprehensive proteomics analysis contributes to an improved understanding of the critical roles that 
+                                                     ECM plays throughout human pancreas development and maturation.</p>
+                                <a href="https://www.nature.com/articles/s41467-021-21261-w" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Peroxy_Abs.jpeg" alt="Card image cap">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Peroxymonosulfate Oxidizes Amino Acids in Water without Activation</h5>
@@ -153,7 +162,7 @@
                         <p class="pub-text">
                             Y Shi, Z. Li, <b>D.G. Delafield</b>, Z. Ye, H. Ye, X. Shi, B. Wang, Z. Chen, F. Ma, L. Li (2020) A Novel Mass 
                             Spectrometry-based Method for Qualitative and Quantitative Analysis of Citrullinated Proteins from Complex 
-                            Biological Samples. <i>Nature Methods</i>, to be submitted.
+                            Biological Samples. <i>Nature Methods</i>, in submission.
                         </p>
                         <p class="pub-text">
                             X. Zhong, D. C. Frost, Q. Yu, M. Li, T.-J. Gu, <b>D.G. Delafield</b>, L. Li (2020) “Mass Defect-based DiLeu
@@ -162,7 +171,8 @@
                         <p class="pub-text">
                             Z. Li, D. M. Tremmel, F. Ma, Q. Yu, M. Ma, <b>D.G. Delafield</b>, Y. Shi, B. Wang, S. A. Mitchell, A. K. Feeney,
                             V. S. Jain, S. D. Sackett, J. S. Odorico, L. Li (2020) “Proteome-wide and Matrisome-specific Alterations 
-                            during Human Pancreas Development and Maturation,” <i>Nature Communications</i>, under revision.
+                            during Human Pancreas Development and Maturation,” <i>Nature Communications</i>. Published online February 15. 2021.
+                            <a href="https://www.nature.com/articles/s41467-021-21261-w">10.1038/s41467-021-21261-w</a>
                         </p>
                         <p class="pub-text">
                             Ruiz, M., Y. Yang, C. A. Lochbaum, <b>D.G. Delafield</b>, J. J. Pignatello, L. Li and J. A. Pedersen (2019).
@@ -234,7 +244,15 @@
                     <h2 class="mb-5">Oral Presentations</h2>
                     <div class="card-table">
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/Presentations/US HUPO 2018.png" alt="MCP Review Image">
+                            <img class="card-img-top" src="assets/img/Presentations/DanielDelafield_Pittcon2021.png" alt="Pittcon 2021 Oral">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Enhancing Glycopeptide Detection, Identification, and Characterization through PGC-Incorporated LC-MS</h5>
+                                <p class="card-text">Pittcon 2021</p>
+                                <a href="assets/img/Presentations/DanielDelafield_Pittcon2021.pdf" target="blank" class="mt-auto btn btn-primary">View</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Presentations/US HUPO 2018.png" alt="US HUPO 2018 Oral">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">N-Glycopeptide Feature Identification by Revealing Trends Between Analyte
                                                        Composition and Compensation Field Through FAIMS-Coupled MS Platform</h5>
