fixed egg shape picture and add alt tag

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Graham Delafield</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="Picture of Graham Delafield" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -59,7 +59,7 @@
                     <p class="lead mb-5">I am a developing researcher in the fields of proteomics, bioinformatics, and computer science. 
                         Currently I am focused on analytical innovation and computational modeling to aid in the profiling and 
                         characterization of the human glycoproteome, performing graduate research at the University of Wisconsin-Madison.
-                        Anticipating graduation in May, 2023, I am interested in gaining experience in industrial and governmenta settings
+                        Anticipating graduation in May, 2023, I am interested in gaining experience in industrial and governmental settings
                         that allow me to exercise my technical expertise and strong communication and leadership skills.
                     </p>
                     <div class="row">
@@ -157,7 +157,7 @@
                     <h2 class="mb-5">Publications</h2>
                     <div class="row">
                         <button type="button" class="btn btn-primary" style="margin-top: 0rem; margin-bottom: 2rem; margin-left: 1rem;">
-                            <a class="button-text" href="portfolio.html#publications" download="DanielGDelafield_Resume">
+                            <a class="button-text" href="portfolio.html#publications">
                             My Portfolio
                             </a>
                         </button>
