--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Graham Delafield</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="Picture of Graham Delafield" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -201,21 +201,13 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Posters</h2>
                     <div class="card-table">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/Posters/ASMS 2017.png" alt="MCP Review Image">
-                            <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Three-Dimensionsal Platform for N-Linked Glycopeptide Separation and Analysis</h5>
-                                <p class="card-text">ASMS 2017</p>
-                                <a href="assets/img/Posters/ASMS 2017.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
-                            </div>
-                        </div>
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/img/Posters/ASMS 2018.png" alt="Card image cap">
+                        <img class="card-img-top" src="assets/img/Posters/ASMS 2020_thumb.png" alt="Card image cap">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Characterization Analysis of Through Arrical Time Correlation Using Concurrent RPLC Fraction
-                                                   Fraction Monitoring and FAIMS Filtering</h5>
-                            <p class="card-text">ASMS 2018</p>
-                            <a href="assets/img/Posters/ASMS 2018.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                            <h5 class="card-title">Enhancing Glycopeptide Detection, Identification, and Structural Characterization through
+                                                   PGC-Incorporated LC-IMS</h5>
+                            <p class="card-text">ASMS 2020</p>
+                            <a href="assets/img/Posters/ASMS 2020.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
@@ -227,12 +219,20 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/img/Posters/ASMS 2020_thumb.png" alt="Card image cap">
+                        <img class="card-img-top" src="assets/img/Posters/ASMS 2018.png" alt="Card image cap">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Enhancing Glycopeptide Detection, Identification, and Structural Characterization through
-                                                   PGC-Incorporated LC-IMS</h5>
-                            <p class="card-text">ASMS 2020</p>
-                            <a href="assets/img/Posters/ASMS 2020.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                            <h5 class="card-title">Characterization Analysis of Through Arrical Time Correlation Using Concurrent RPLC Fraction
+                                                   Fraction Monitoring and FAIMS Filtering</h5>
+                            <p class="card-text">ASMS 2018</p>
+                            <a href="assets/img/Posters/ASMS 2018.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/img/Posters/ASMS 2017.png" alt="MCP Review Image">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Three-Dimensionsal Platform for N-Linked Glycopeptide Separation and Analysis</h5>
+                            <p class="card-text">ASMS 2017</p>
+                            <a href="assets/img/Posters/ASMS 2017.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
                         </div>
                     </div>
                 </div>
