added to experience

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <!-- Publications-->
             <section class="resume-section" id="publications">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Publications</h2>
+                    <h2 class="mb-5" style="margin-bottom: 1rem;">Publications</h2>
                     <div class="row">
                         <button type="button" class="btn btn-primary" style="margin-top: 0rem; margin-bottom: 2rem; margin-left: 1rem;">
                             <a class="button-text" href="portfolio.html#publications">
@@ -231,10 +231,14 @@
                                     spectrometry.
                                 </li>
                                 <li class="exp-list-item">
-                                    Development of novel online multiplexed analysis of bottom-up, middle-down, 
-                                    and top-down glycoconjugate species utilizing capillary electrophoresis, porous 
-                                    graphitized carbon liquid chromatography, ion mobility spectrometry, and mass 
-                                    spectrometry.
+                                    Investigated strategies for high-throughput structural elucidation of active biomolecules by leveraging
+                                    computational modeling in tandem with novel chromatography and ion mobility mass spectrometry.
+                                </li>
+                                <li class="exp-list-item">
+                                    Utilized capillary electrophoresis and computational modeling to perform multi-tier glycoconjugate analysis.
+                                </li>
+                                <li class="exp-list-item">
+                                    Engineered custom web application and machine learning algorithms for proteomic data presentation and analysis.
                                 </li>
                             </ul>
                             <p></p>
