--- a/index.html
+++ b/index.html
@@ -312,18 +312,26 @@
                                 <span class="fa-li-low"></span>
                                 Bottom-up | middle-down | top-down 
                             </li>
+                            <li>
+                                <span class="fa-li-low"></span>
+                                Protein & peptide identification | Glycan and glycopeptide characterization  
+                            </li>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Hiph Pressure Liquid Chromatography
                             <li>
                                 <span class="fa-li-low"></span>
-                                Nano & Standard Flow | Reversed-phase | Porous graphitic carbon  
+                                Nano & Standard Flow | Reversed-phase | Porous graphitic carbon | Ion-Exchange | Size Exclusion
                             </li>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Capillary Electrophoresis
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Custom Bioinformatics and Programming
                         </li>
                     </ul>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
