added RSC chem bio publication

--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
                     </p>
                     <p class="pub-text">
                         H.N. Miles†, <b>D.G. Delafield†</b>, L. Li, (2021). “Recent Developments and Applications of Quantitative Proteomics Strategies for High-Throughput 
-                        Cancer Biomolecular Analyses in Cancer Research.” <i>RSC Chemical Biology</i>. (In submission)
+                        Cancer Biomolecular Analyses in Cancer Research.” <i>RSC Chemical Biology</i>. Published online May 19, 2021. <a href="https://pubs.rsc.org/en/content/articlelanding/2021/CB/D1CB00039J#!divAbstract">
+                        doi.org/10.1039/D1CB00039J.</a>
                     </p>
                     <p class="pub-text">
                         Y. Liu, <b>D.G. Delafield</b>, L. Li (2021) “Comprehensive Mass Spectrometric Characterization of Neuropeptidome in 
