--- a/portfolio.html
+++ b/portfolio.html
@@ -101,6 +101,15 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/RSC_Rev_2021.png" alt="RSC-ChemBio Review Image">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Recent developments and applications of quantitative proteomics strategies for high-throughput biomolecular analyses in cancer research</h5>
+                                <p class="card-text">Review of recent applications and associated advancements in quantitative proteomics
+                                                     applications in cancer research.</p>
+                                <a href="https://doi.org/10.1039/D1CB00039J" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/ECM_Nat_Com.png" alt="MCP Review Image">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Proteome-wide and Matrisome-specific Alterations during Human Pancreas Development and Maturation</h5>
@@ -153,7 +162,8 @@
                         </p>
                         <p class="pub-text">
                             H.N. Miles†, <b>D.G. Delafield†</b>, L. Li, (2021). “Recent Developments and Applications of Quantitative Proteomics Strategies for High-Throughput 
-                            Cancer Biomolecular Analyses in Cancer Research.” <i>RSC Chemical Biology</i>. (In submission)
+                            Cancer Biomolecular Analyses in Cancer Research.” <i>RSC Chemical Biology</i>. Published online May 19, 2021. <a href="https://pubs.rsc.org/en/content/articlelanding/2021/CB/D1CB00039J#!divAbstract">
+                            doi.org/10.1039/D1CB00039J.</a>
                         </p>
                         <p class="pub-text">
                             Y. Liu, <b>D.G. Delafield</b>, L. Li (2021) “Comprehensive Mass Spectrometric Characterization of Neuropeptidome in 
