--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#employment">Employment</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
@@ -86,6 +87,48 @@
                             My Research Group
                             </a>
                         </button>
+                    </div>
+                </div>
+            </section>
+            <!-- Employment-->
+            <section class="resume-section" id="employment">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Employment</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Genentech, BAS-O3M</h3>
+                            <div class="subheading mb-3">Research Intern</div>
+                            <ul class="exp-list-head">
+                                <li class="exp-list-item">
+                                    Developed custom, full-stack software to rapidly parce and present mass spectrometry-based 
+                                    immunogenecity evaluations of antibody drug candidates.
+                                </li>
+                                <li class="exp-list-item">
+                                    Produced high-throughput data anlysis tools that removed need for manual interpretation and 
+                                    reduced drug candidate assessment time by >80%.
+                                </li>
+                                <!-- <li class="exp-list-item">
+                                    Des
+                                </li> -->
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2021 - August 2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Wisconsin-Alumni Research Foundation</h3>
+                            <div class="subheading mb-3">Graduate Ambassador</div>
+                            <ul class="exp-list-head">
+                                <li class="exp-list-item">
+                                    Responsible for establishing, maintaining, and utilizing network of academic and industrial researchers
+                                    and disseminating procedural knowledge for technology transfer
+                                </li>
+                                <li class="exp-list-item">
+                                    Leveraged university resources to find novel gene-edited cell line technology with patent and license potential.
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - Present</span></div>
                     </div>
                 </div>
             </section>
@@ -163,18 +206,8 @@
                         </button>
                     </div>
                     <p class="pub-text">
-                        <b>D.G. Delafield</b>, Li, L., (2020). “Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation.” 
-                        <i>Molecular & Cellular Proteomics</i>. Published online June 23, 2020. <a href="https://doi.org/10.1074/mcp.R120.002095">
-                            10.1074/mcp.R120.002095.</a>
-                    </p>
-                    <p class="pub-text">
                         <b>D.G. Delafield</b>, H.N. Miles, Y. Liu, W.A. Ricke, L. Li, (2021). “Complementary Proteome and Glycoproteome Access Revealed 
                         Through Comparative Analysis of Reversed Phase and Porous Graphitic Carbon Chromatography.” (In submission)
-                    </p>
-                    <p class="pub-text">
-                        H.N. Miles†, <b>D.G. Delafield†</b>, L. Li, (2021). “Recent Developments and Applications of Quantitative Proteomics Strategies for High-Throughput 
-                        Cancer Biomolecular Analyses in Cancer Research.” <i>RSC Chemical Biology</i>. Published online May 19, 2021. <a href="https://pubs.rsc.org/en/content/articlelanding/2021/CB/D1CB00039J#!divAbstract">
-                        doi.org/10.1039/D1CB00039J.</a>
                     </p>
                     <p class="pub-text">
                         Y. Liu, <b>D.G. Delafield</b>, L. Li (2021) “Comprehensive Mass Spectrometric Characterization of Neuropeptidome in 
@@ -188,6 +221,16 @@
                     <p class="pub-text">
                         X. Zhong, D. C. Frost, Q. Yu, M. Li, T.J. Gu, <b>D.G. Delafield</b>, L. Li (2021) “Mass Defect-based DiLeu
                         Tagging for Multiplexed Data-Independent Acquisition,” <i>Analytical Chemistry</i>, to be submitted.
+                    </p>
+                    <p class="pub-text">
+                        H.N. Miles†, <b>D.G. Delafield†</b>, L. Li, (2021). “Recent Developments and Applications of Quantitative Proteomics Strategies for High-Throughput 
+                        Cancer Biomolecular Analyses in Cancer Research.” <i>RSC Chemical Biology</i>. Published online May 15, 2021. <a href="http://dx.doi.org/10.1039/D1CB00039J">
+                            10.1039/D1CB00039J</a>
+                    </p>
+                    <p class="pub-text">
+                        <b>D.G. Delafield</b>, Li, L., (2020). “Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation.” 
+                        <i>Molecular & Cellular Proteomics</i>. Published online June 23, 2020. <a href="https://doi.org/10.1074/mcp.R120.002095">
+                            10.1074/mcp.R120.002095.</a>
                     </p>
                     <p class="pub-text">
                         Z. Li, D. M. Tremmel, F. Ma, Q. Yu, M. Ma, <b>D.G. Delafield</b>, Y. Shi, B. Wang, S. A. Mitchell, A. K. Feeney,
