--- a/portfolio.html
+++ b/portfolio.html
@@ -152,18 +152,8 @@
                     </div>
                     <div class="row">
                         <p class="pub-text">
-                            <b>D.G. Delafield</b>, Li, L., (2020). “Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation.” 
-                            <i>Molecular & Cellular Proteomics</i>. Published online June 23, 2020. <a href="https://doi.org/10.1074/mcp.R120.002095">
-                                10.1074/mcp.R120.002095.</a>
-                        </p>
-                        <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, Y. Liu, W.A. Ricke, L. Li, (2021). “Complementary Proteome and Glycoproteome Access Revealed 
                             Through Comparative Analysis of Reversed Phase and Porous Graphitic Carbon Chromatography.” (In submission)
-                        </p>
-                        <p class="pub-text">
-                            H.N. Miles†, <b>D.G. Delafield†</b>, L. Li, (2021). “Recent Developments and Applications of Quantitative Proteomics Strategies for High-Throughput 
-                            Cancer Biomolecular Analyses in Cancer Research.” <i>RSC Chemical Biology</i>. Published online May 19, 2021. <a href="https://pubs.rsc.org/en/content/articlelanding/2021/CB/D1CB00039J#!divAbstract">
-                            doi.org/10.1039/D1CB00039J.</a>
                         </p>
                         <p class="pub-text">
                             Y. Liu, <b>D.G. Delafield</b>, L. Li (2021) “Comprehensive Mass Spectrometric Characterization of Neuropeptidome in 
@@ -177,6 +167,16 @@
                         <p class="pub-text">
                             X. Zhong, D. C. Frost, Q. Yu, M. Li, T.J. Gu, <b>D.G. Delafield</b>, L. Li (2021) “Mass Defect-based DiLeu
                             Tagging for Multiplexed Data-Independent Acquisition,” <i>Analytical Chemistry</i>, to be submitted.
+                        </p>
+                        <p class="pub-text">
+                            H.N. Miles†, <b>D.G. Delafield†</b>, L. Li, (2021). “Recent Developments and Applications of Quantitative Proteomics Strategies for High-Throughput 
+                            Cancer Biomolecular Analyses in Cancer Research.” <i>RSC Chemical Biology</i>. Published online May 15, 2021. <a href="http://dx.doi.org/10.1039/D1CB00039J">
+                                10.1039/D1CB00039J</a>
+                        </p>
+                        <p class="pub-text">
+                            <b>D.G. Delafield</b>, Li, L., (2020). “Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation.” 
+                            <i>Molecular & Cellular Proteomics</i>. Published online June 23, 2020. <a href="https://doi.org/10.1074/mcp.R120.002095">
+                                10.1074/mcp.R120.002095.</a>
                         </p>
                         <p class="pub-text">
                             Z. Li, D. M. Tremmel, F. Ma, Q. Yu, M. Ma, <b>D.G. Delafield</b>, Y. Shi, B. Wang, S. A. Mitchell, A. K. Feeney,
