adding jacs ab42

--- a/portfolio.html
+++ b/portfolio.html
@@ -153,7 +153,11 @@
                     <div class="row">
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, Y. Liu, W.A. Ricke, L. Li, (2021). “Complementary Proteome and Glycoproteome Access Revealed 
-                            Through Comparative Analysis of Reversed Phase and Porous Graphitic Carbon Chromatography.” (In submission)
+                            Through Comparative Analysis of Reversed Phase and Porous Graphitic Carbon Chromatography.” <i>Anal. Bioanal. Chem.</i> (In submission)
+                        </p>
+                        <p class="pub-text">
+                            G. Li, C. Jeon, M. Ma, Z. Zheng, <b>D.G. Delafield</b>, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
+                            "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42" <i>JACS</i> (In Submission)
                         </p>
                         <p class="pub-text">
                             Y. Liu, <b>D.G. Delafield</b>, L. Li (2021) “Comprehensive Mass Spectrometric Characterization of Neuropeptidome in 
@@ -162,7 +166,7 @@
                         <p class="pub-text">
                             Y Shi, Z. Li, <b>D.G. Delafield</b>, Z. Ye, H. Ye, X. Shi, B. Wang, Z. Chen, F. Ma, L. Li (2021) A Novel Mass 
                             Spectrometry-based Method for Qualitative and Quantitative Analysis of Citrullinated Proteins from Complex 
-                            Biological Samples. <i>Nature Methods</i>, in submission.
+                            Biological Samples. <i>Nature Methods</i>, under editorial consideration.
                         </p>
                         <p class="pub-text">
                             X. Zhong, D. C. Frost, Q. Yu, M. Li, T.J. Gu, <b>D.G. Delafield</b>, L. Li (2021) “Mass Defect-based DiLeu
