--- a/portfolio.html
+++ b/portfolio.html
@@ -215,40 +215,49 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Posters</h2>
                     <div class="card-table">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/img/Posters/ASMS 2020_thumb.png" alt="Card image cap">
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Enhancing Glycopeptide Detection, Identification, and Structural Characterization through
-                                                   PGC-Incorporated LC-IMS</h5>
-                            <p class="card-text">ASMS 2020</p>
-                            <a href="assets/img/Posters/ASMS 2020.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Posters/ASMS 2021.png" alt="Card image cap">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">High Resolution Demultiplexing Ion Mobility: A New Paradigm for Intact Glycopeptide
+                                                       Structural Assignment</h5>
+                                <p class="card-text">ASMS 2021</p>
+                                <a href="assets/img/Posters/ASMS 2021.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/img/Posters/ASMS 2019.png" alt="Card image cap">
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Pursuit of Bottom-Up, Middle-Down, and Top-Down Glycoconjugate Analysis Through CE-ESI-MS</h5>
-                            <p class="card-text">ASMS 2019</p>
-                            <a href="assets/img/Posters/ASMS 2019.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Posters/ASMS 2020_thumb.png" alt="Card image cap">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Enhancing Glycopeptide Detection, Identification, and Structural Characterization through
+                                                    PGC-Incorporated LC-IMS</h5>
+                                <p class="card-text">ASMS 2020</p>
+                                <a href="assets/img/Posters/ASMS 2020.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/img/Posters/ASMS 2018.png" alt="Card image cap">
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Characterization Analysis of Through Arrical Time Correlation Using Concurrent RPLC Fraction
-                                                   Fraction Monitoring and FAIMS Filtering</h5>
-                            <p class="card-text">ASMS 2018</p>
-                            <a href="assets/img/Posters/ASMS 2018.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Posters/ASMS 2019.png" alt="Card image cap">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Pursuit of Bottom-Up, Middle-Down, and Top-Down Glycoconjugate Analysis Through CE-ESI-MS</h5>
+                                <p class="card-text">ASMS 2019</p>
+                                <a href="assets/img/Posters/ASMS 2019.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/img/Posters/ASMS 2017.png" alt="MCP Review Image">
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Three-Dimensionsal Platform for N-Linked Glycopeptide Separation and Analysis</h5>
-                            <p class="card-text">ASMS 2017</p>
-                            <a href="assets/img/Posters/ASMS 2017.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Posters/ASMS 2018.png" alt="Card image cap">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Characterization Analysis of Through Arrical Time Correlation Using Concurrent RPLC Fraction
+                                                    Fraction Monitoring and FAIMS Filtering</h5>
+                                <p class="card-text">ASMS 2018</p>
+                                <a href="assets/img/Posters/ASMS 2018.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                            </div>
                         </div>
-                    </div>
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Posters/ASMS 2017.png" alt="MCP Review Image">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Three-Dimensionsal Platform for N-Linked Glycopeptide Separation and Analysis</h5>
+                                <p class="card-text">ASMS 2017</p>
+                                <a href="assets/img/Posters/ASMS 2017.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                            </div>
+                        </div>
                 </div>
             </section>
             <hr class="m-0" />
