update publications and CV

--- a/index.html
+++ b/index.html
@@ -206,59 +206,77 @@
                         </button>
                     </div>
                     <p class="pub-text">
+                        <b>D.G. Delafield</b>, Li, L., (2020). “Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation.” 
+                        <i>Molecular & Cellular Proteomics</i>. Published online June 23, 2020. <a href="https://doi.org/10.1074/mcp.R120.002095">
+                            10.1074/mcp.R120.002095.</a>
+                    </p>
+                    <p class="pub-text">
+                        <b>D.G. Delafield†</b> H.N. Miles†, L. Li, (2021). “Recent Developments and Applications of Quantitative Proteomics Strategies for High-Throughput 
+                        Cancer Biomolecular Analyses in Cancer Research.” <i>RSC Chemical Biology</i>. Published online May 15, 2021. <a href="http://dx.doi.org/10.1039/D1CB00039J">
+                            10.1039/D1CB00039J</a> (†co-first authors)
+                    </p>
+                    <p class="pub-text">
                         <b>D.G. Delafield</b>, H.N. Miles, Y. Liu, W.A. Ricke, L. Li, (2021). “Complementary Proteome and Glycoproteome Access Revealed 
-                        Through Comparative Analysis of Reversed Phase and Porous Graphitic Carbon Chromatography.” <i>Anal. Bioanal. Chem.</i> (In submission)
+                        Through Comparative Analysis of Reversed Phase and Porous Graphitic Carbon Chromatography.” <i>Anal. Bioanal. Chem.</i> Invited contribution to the topical 
+                        paper collection featuring <b>Promising Early-Career (Bio-)Analytical Researchers</b> (nominated by thesis advisor), Under revision.
+                    </p>
+                    <p class="pub-text">
+                        <b>D.G. Delafield</b>, A. Phetsanthad, L. Li (2021). “Gas Phase Fractionation, Data-Independent Acquisition for Improved Profiling Depth in Microfluidic 
+                        Capillary Electrophoresis Mass Spectrometry.” (In Preparation)
+                    </p>
+                    <p class="pub-text">
+                        <b>D.G. Delafield</b>, D. Wang, H.N. Miles, L. Li (2021). “Biphasic Reversed-Phase, Porous Graphitic Carbon Capillary Columns facilitates Comprehensive 
+                        Bottom-up Glycoproteomics.” (In Preparation)
+                    </p>
+                    <p class="pub-text">
+                        <b>D.G. Delafield</b>, H.N. Miles, L. Li (2021). “High Temperature Porous Graphitic Carbon Enables Isomeric Separation of Intact Glycopeptides but Reduces 
+                        Quantitative Accuracy.” (In Preparation)
+                    </p>
+                    <p class="pub-text">
+                        Z. Li, D. M. Tremmel, F. Ma, Q. Yu, M. Ma, <b>D.G. Delafield</b>, Y. Shi, B. Wang, S. A. Mitchell, A. K. Feeney,
+                        V. S. Jain, S. D. Sackett, J. S. Odorico, L. Li (2020) “Proteome-wide and Matrisome-specific Alterations 
+                        during Human Pancreas Development and Maturation,” <i>Nature Communications</i>. Published online February 15. 2021.
+                        <a href="https://www.nature.com/articles/s41467-021-21261-w">10.1038/s41467-021-21261-w</a>
+                    </p>
+                    <p class="pub-text">
+                        Ruiz, M., Y. Yang, C. A. Lochbaum, <b>D.G. Delafield</b>, J. J. Pignatello, L. Li and J. A. Pedersen (2019).
+                        "Peroxymonosulfate Oxidizes Amino Acids in Water without Activation." <i>Environmental Science and 
+                        Technology</i>. 53, 10845-10854. <a href="https://pubs.acs.org/doi/abs/10.1021/acs.est.9b01322">
+                        10.1021/acs.est.9b01322</a>
+                    </p>
+                    <p class="pub-text">
+                        Li, G., <b>D.G. Delafield</b> and L. Li (2019). "Improved Structural Elucidation of Peptide Isomers and
+                        Their Receptors Using Advanced Ion Mobility-Mass Spectrometry." <i>Trends in Analytical Chemistry</i>. 
+                        Published online, June 4, 2019, in press. <a href="https://doi.org/10.1016/j.trac.2019.05.048">
+                        10.1016/j.trac.2019.05.048</a>
+                    </p>
+                    <p class="pub-text">
+                        M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2021) 
+                        “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
+                        Fragile X Syndrome Mouse Model”. Nature Communications. Under revision.
+                    </p>
+                    <p class="pub-text">
+                        Y Shi, Z. Li, Z. Ye, H. Ye, <b>D.G. Delafield</b>, X. Shi, B. Wang, Z. Chen, F. Ma, L. Li (2021) A Novel Mass 
+                        Spectrometry-based Method for Qualitative and Quantitative Analysis of Citrullinated Proteins from Complex 
+                        Biological Samples. (In preparation).
                     </p>
                     <p class="pub-text">
                         G. Li, C. Jeon, M. Ma, Z. Zheng, <b>D.G. Delafield</b>, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
-                        "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42" <i>JACS</i> (In Submission)
+                        "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42" <i>Angewandte Chemie</i> (In Submission)
                     </p>
                     <p class="pub-text">
                         Y. Liu, <b>D.G. Delafield</b>, L. Li (2021) “Comprehensive Mass Spectrometric Characterization of Neuropeptidome in 
                         Nervous System of the Atlantic Blue Crab, Callinectes sapidus,” <i>Analytical Chemistry</i>, to be submitted.
                     </p>
                     <p class="pub-text">
-                        Y Shi, Z. Li, <b>D.G. Delafield</b>, Z. Ye, H. Ye, X. Shi, B. Wang, Z. Chen, F. Ma, L. Li (2021) A Novel Mass 
-                        Spectrometry-based Method for Qualitative and Quantitative Analysis of Citrullinated Proteins from Complex 
-                        Biological Samples. <i>Nature Methods</i>, under editorial consideration.
-                    </p>
-                    <p class="pub-text">
                         X. Zhong, D. C. Frost, Q. Yu, M. Li, T.J. Gu, <b>D.G. Delafield</b>, L. Li (2021) “Mass Defect-based DiLeu
                         Tagging for Multiplexed Data-Independent Acquisition,” <i>Analytical Chemistry</i>, to be submitted.
-                    </p>
-                    <p class="pub-text">
-                        H.N. Miles†, <b>D.G. Delafield†</b>, L. Li, (2021). “Recent Developments and Applications of Quantitative Proteomics Strategies for High-Throughput 
-                        Cancer Biomolecular Analyses in Cancer Research.” <i>RSC Chemical Biology</i>. Published online May 15, 2021. <a href="http://dx.doi.org/10.1039/D1CB00039J">
-                            10.1039/D1CB00039J</a>
-                    </p>
-                    <p class="pub-text">
-                        <b>D.G. Delafield</b>, Li, L., (2020). “Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation.” 
-                        <i>Molecular & Cellular Proteomics</i>. Published online June 23, 2020. <a href="https://doi.org/10.1074/mcp.R120.002095">
-                            10.1074/mcp.R120.002095.</a>
-                    </p>
-                    <p class="pub-text">
-                        Z. Li, D. M. Tremmel, F. Ma, Q. Yu, M. Ma, <b>D.G. Delafield</b>, Y. Shi, B. Wang, S. A. Mitchell, A. K. Feeney,
-                            V. S. Jain, S. D. Sackett, J. S. Odorico, L. Li (2020) “Proteome-wide and Matrisome-specific Alterations 
-                            during Human Pancreas Development and Maturation,” <i>Nature Communications</i>. Published online February 15. 2021.
-                            <a href="https://www.nature.com/articles/s41467-021-21261-w">10.1038/s41467-021-21261-w</a>
-                    </p>
-                    <p class="pub-text">
-                        Ruiz, M., Y. Yang, C. A. Lochbaum, <b>D.G. Delafield</b>, J. J. Pignatello, L. Li and J. A. Pedersen (2019).
-                        "Peroxymonosulfate Oxidizes Amino Acids in Water without Activation." <i>Environmental Science and 
-                        Technology</i>. 53, 10845-10854. <a href="https://pubs.acs.org/doi/abs/10.1021/acs.est.9b01322">
-                            10.1021/acs.est.9b01322</a>
-                    </p>
-                    <p class="pub-text">
-                        Li, G., <b>D.G. Delafield</b> and L. Li (2019). "Improved Structural Elucidation of Peptide Isomers and
-                        Their Receptors Using Advanced Ion Mobility-Mass Spectrometry." <i>Trends in Analytical Chemistry</i>. 
-                        Published online, June 4, 2019, in press. <a href="https://doi.org/10.1016/j.trac.2019.05.048">
-                            10.1016/j.trac.2019.05.048</a>
                     </p>
                     <p class="pub-text">
                         Ma, H., <b>D.G. Delafield</b>, Z. Wang, J. You and S. Wu (2017). "Finding Biomass Degrading Enzymes 
                         Through an Activity-Correlated Quantitative Proteomics Platform (ACPP)." <i>Journal of American 
                         for Mass Spectrometry</i>. 28, 655-663. <a href="https://pubs.acs.org/doi/abs/10.1021/jasms.8b05509">
-                            10.1021/jasms.8b05509</a>
+                        10.1021/jasms.8b05509</a>
                     </p>
                 </div>
             </section>
