updating employment and research

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                         645 Skyview Place · Madison, WI 53713 · (405) 219-4741 ·
                         <a href="mailto:graham.delafield@gmail.com" style="color: #3a426b;">graham.delafield@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a developing researcher in the fields of proteomics, bioinformatics, and computer science. 
+                    <p class="lead mb-5">
+                        I am a developing researcher in the fields of proteomics, bioinformatics, and computer science. 
                         Currently I am focused on analytical innovation and computational modeling to aid in the profiling and 
                         characterization of the human glycoproteome, performing graduate research at the University of Wisconsin-Madison.
                         Anticipating graduation in May, 2023, I am interested in gaining experience in industrial and governmental settings
@@ -100,16 +101,13 @@
                             <div class="subheading mb-3">Research Intern</div>
                             <ul class="exp-list-head">
                                 <li class="exp-list-item">
-                                    Developed custom, full-stack software to rapidly parce and present mass spectrometry-based 
-                                    immunogenecity evaluations of antibody drug candidates.
+                                    Developed custom, full-stack desktop applications to automate and streamline immunogenicity
+                                    assessment of drug candidates, which enabled > 99% reduction in analysis time.
                                 </li>
                                 <li class="exp-list-item">
-                                    Produced high-throughput data anlysis tools that removed need for manual interpretation and 
-                                    reduced drug candidate assessment time by >80%.
+                                    Engineered custom user interfaces to enable high-throughput analysis of large tabular datasets, providing
+                                    a 500-fold increase in data utilization.
                                 </li>
-                                <!-- <li class="exp-list-item">
-                                    Des
-                                </li> -->
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2021 - August 2021</span></div>
@@ -291,20 +289,33 @@
                             <div class="subheading mb-3">University of Wisconsin-Madison, PI: Lingjun Li</div>
                             <ul class="exp-list-head">
                                 <li class="exp-list-item">
-                                    Development of novel online multiplexed analysis of bottom-up, middle-down, 
-                                    and top-down glycoconjugate species utilizing capillary electrophoresis, porous 
-                                    graphitized carbon liquid chromatography, ion mobility spectrometry, and mass 
-                                    spectrometry.
+                                    Fabricated and validated PGC-enabled separation strategies that increased peptide and glycopeptide
+                                    coverage by up to 20%.
+                                </li>
+                                <li class="exp-list-item">
+                                    Facilitated higher throughput in microfluidic capillary electrophoresis-driven bottom-up proteomics
+                                    through optimization of data-independent acquisition mass spectrometry.
                                 </li>
                                 <li class="exp-list-item">
                                     Investigated strategies for high-throughput structural elucidation of active biomolecules by leveraging
                                     computational modeling in tandem with novel chromatography and ion mobility mass spectrometry.
                                 </li>
                                 <li class="exp-list-item">
-                                    Utilized capillary electrophoresis and computational modeling to perform multi-tier glycoconjugate analysis.
+                                    Implementation of informatics pipelines to establish inter- and intrasample quantitative accuracy in 
+                                    dataindependent acquisition bottom-up proteomics.
                                 </li>
                                 <li class="exp-list-item">
-                                    Engineered custom web application and machine learning algorithms for proteomic data presentation and analysis.
+                                    Performed custom informatic analysis of MALDI-MSI datasets to normalize multiplexed datasets, extract
+                                    features of interest, and perform machine learning classification.
+                                </li>
+                                <li class="exp-list-item">
+                                    Deployed custom web-application based solutions for browsing, filtering, and sharing mass spectrometry
+                                    data.
+                                </li>
+                                <li class="exp-list-item">
+                                    Development of novel online multiplexed analysis of bottom-up, middle-down, and top-down
+                                    glycoconjugate species utilizing capillary electrophoresis, porous graphitized carbon liquid
+                                    chromatography, ion mobility spectrometry, and mass spectrometry.
                                 </li>
                             </ul>
                             <p></p>
